--- a/SeeFood IBM/Base.lproj/Main.storyboard
+++ b/SeeFood IBM/Base.lproj/Main.storyboard
@@ -18,16 +18,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2DW-OR-tAC">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hotdogBackground" translatesAutoresizingMaskIntoConstraints="NO" id="fHc-MA-1pL" userLabel="Static Hotdog Image">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="KqA-1c-C2E"/>
+                                    <constraint firstAttribute="width" constant="240" id="zy7-Ep-D3m"/>
+                                </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2DW-OR-tAC" userLabel="User Chosen Image">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sMe-3k-nrg">
+                                <rect key="frame" x="0.0" y="64" width="375" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="kiX-QH-3Ea"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LrC-aY-Ktd">
+                                <rect key="frame" x="102" y="667" width="171" height="54"/>
+                                <color key="backgroundColor" red="0.34389120185935301" green="0.69868840395938225" blue="0.9450745558375635" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                <state key="normal" title="Share">
+                                    <color key="titleColor" red="1" green="0.99997437" blue="0.99999129769999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="shareTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y4b-xV-fIR"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.83529411764705885" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="2DW-OR-tAC" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="0UR-r9-zYQ"/>
-                            <constraint firstItem="2DW-OR-tAC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="O7p-f4-giN"/>
-                            <constraint firstItem="2DW-OR-tAC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="v1D-yj-RPe"/>
-                            <constraint firstItem="2DW-OR-tAC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="yqP-FP-PfF"/>
+                            <constraint firstItem="fHc-MA-1pL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9SA-Nj-0X4"/>
+                            <constraint firstItem="LrC-aY-Ktd" firstAttribute="top" secondItem="sMe-3k-nrg" secondAttribute="bottom" constant="520" id="C2d-dt-6BD"/>
+                            <constraint firstItem="sMe-3k-nrg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IlR-pj-5oV"/>
+                            <constraint firstItem="sMe-3k-nrg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Tse-qY-9ZC"/>
+                            <constraint firstItem="sMe-3k-nrg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Twu-KS-iHJ"/>
+                            <constraint firstItem="fHc-MA-1pL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WEV-bO-6X9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -41,6 +73,8 @@
                     <connections>
                         <outlet property="cameraButton" destination="h32-tF-eaz" id="ZdZ-dp-kee"/>
                         <outlet property="imageView" destination="2DW-OR-tAC" id="pWX-Nd-Cvj"/>
+                        <outlet property="shareButton" destination="LrC-aY-Ktd" id="ma6-SZ-Gkf"/>
+                        <outlet property="topBarImageView" destination="sMe-3k-nrg" id="gL1-aQ-CGm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -55,6 +89,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0rA-Y7-tzm">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -66,4 +103,7 @@
             <point key="canvasLocation" x="292" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hotdogBackground" width="191" height="143"/>
+    </resources>
 </document>
